Add feature flag